syntax = "proto3";

package ose.micro.authora.user.v1;

import "google/protobuf/timestamp.proto";
import "ose/micro/common/v1/request.proto";

option go_package = "github.com/ose-micro/authora/internal/interface/grpc/gen/go/ose/micro/authora/user/v1;userv1";

message User {
  string id = 1;
  string given_names = 2;
  string family_name = 3;
  string email = 4;
  map<string, string> metadata = 5;
  int32 version = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp deleted_at = 9;
}

message CreateRequest {
  string given_names = 1;
  string family_name = 2;
  string email = 3;
  map<string, string> metadata = 4;
}

message CreateResponse {
  string message = 1;
  User record = 2;
}

message UpdateRequest {
  string id = 1;
  string given_names = 2;
  string family_name = 3;
  map<string, string> metadata = 4;
}

message UpdateResponse {
  string message = 1;
  User record = 2;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string message = 1;
}

message Tenants {
  repeated User data = 1;
}

message ReadRequest {
  ose.micro.common.v1.Request request = 1;
}

message ReadResponse {
  map<string, Tenants> result = 1;
}
